disable SSDT-SBUS-MCHC.aml

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -41,7 +41,7 @@
 			<dict>
 				<key>Comment</key>
 				<string>SSDT-SBUS-MCHC.aml</string>
-				<key>Enabled</key>
+				<key>Disabled</key>
 				<true/>
 				<key>Path</key>
 				<string>SSDT-SBUS-MCHC.aml</string>
